# ESP32-initial-application-framework

./: README.md  custom_partition_table.csv  sdkconfig
main/: CMakeLists.txt  Kconfig.projbuild  app_queue.c  app_queue.h  defaults_globals.h  esp32_main.c  http_api_json.c  networkstartstop.c  time_task.c  time_task.h
spiffs_files/: index.html
